--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,5 @@
 username=Admin 
 password=admin123 
-url=https://opensource-demo.orangehrmlive.com/
+url1=https://opensource-demo.orangehrmlive.com/
+url=https://sleepy-brook-65250.herokuapp.com/
 browser=chrome
