--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
     <artifactId>poi-ooxml-schemas</artifactId>
     <version>4.0.1</version>
 </dependency>
+<!-- Below dependecy for Extent Report -->
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.0.0</version>
+</dependency>
 
   </dependencies>
 </project>
