--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,30 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>SeleniumFrameworkArt</name>
   <description>SeleniumFrameworkArt</description>
-  <dependencies>
+  <build> <plugins>
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>TestNGSuite.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+  
+  </plugin>
+  
+  <!-- Compiler plugin configures the java version to be usedfor compiling 
+                the code -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+  </plugins></build>
+   <dependencies>
   <!-- https://mvnrepository.com/artifact/log4j/log4j -->
 <dependency>
     <groupId>log4j</groupId>
